@@ -1,18 +1,11 @@
 package com.genexus;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
+import java.io.*;
 import java.math.BigDecimal;
 import java.nio.file.Paths;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.Calendar;
-import java.util.Date;
-import java.util.Locale;
-import java.util.Random;
-import java.util.TimeZone;
-import java.util.Vector;
+import java.util.*;
 
 import com.genexus.common.interfaces.SpecificImplementation;
 import com.genexus.internet.HttpContext;
@@ -712,7 +705,7 @@ public final class GXutil
 	}
 	public static Date dtadd(Date date, double seconds)
 	{
-		return dtadd(date, (int)seconds);
+		return CommonUtil.dtadd(date, seconds);
 	}
 
 	public static Date dtaddms(Date date, double seconds)
@@ -1103,31 +1096,35 @@ public final class GXutil
 		return (byte) NativeFunctions.getInstance().shellExecute(document, "print");
 	}
 
-    /** Hace un Shell modal. Ejecuta en la misma 'consola' que su parent
-     * @param command Comando a ejecutar
-     * @return true si el comando se pudo ejecutar
-     */
-    public static boolean shellModal(String command)
-    {
-        return NativeFunctions.getInstance().executeModal(command, true);
-    }
-
 	public static byte shell(String cmd, int modal)
 	{
-		if	(modal == 1)
-			return shellModal(cmd)? 0 : (byte) 1;
-
 		try
 		{
-			Runtime.getRuntime().exec(cmd);
+			if (modal == 0)
+			{
+				Runtime.getRuntime().exec(cmd);
+				return 0;
+			}
+			else
+			{
+				List<String> al = Arrays.asList(cmd.split(" "));
+				ProcessBuilder pb = new ProcessBuilder(al);
+				pb.redirectOutput(ProcessBuilder.Redirect.INHERIT);
+				pb.redirectError(ProcessBuilder.Redirect.INHERIT);
+				pb.redirectInput(ProcessBuilder.Redirect.INHERIT);
+				Process p = pb.start();
+
+				byte exitCode = (byte) p.waitFor();
+
+				p.destroy();
+				return exitCode;
+			}
 		}
 		catch (Exception e)
         {
         	System.err.println("e " + e);
 			return 1;
 		}
-
-		return 0;
 	}
 
 	public static byte shell(String cmd)
